# dictwalk

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTES.md  README.md  TODO.md  benchmarks.md  examples.md  filters.md  pyproject.toml  tox.ini
.benchbro/: baseline.local.json
.github/workflows/: ci.yml  release.yml
benchmarks/: get_benchmark.py
dictwalk/: __init__.py  backend.py  dictwalk.py  errors.py  path_filters.py
docs/: cli-tool-spec.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: benchmark_backends.py
tests/: conftest.py
tests/unit/: test_backend_selection.py  test_errors.py  test_get.py  test_run_filter_function.py  test_set.py  test_unset.py
